fixed height on lightbox. added active classes in css for popular cards and service cards for smoother animations on mobile dimensions. added scroll to top of page after refresh on landing page.

--- a/style.css
+++ b/style.css
@@ -837,6 +837,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
+    height: 100%;
     width: 100%;
     background: rgba(0, 0, 0, 0.95);
     z-index: 1000;
